--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,11 @@ certifi==2020.6.20
 chardet==3.0.4
 colorama==0.4.3
 Django==3.0.6
+django-cors-headers==3.5.0
 djangorestframework==3.10.0
 idna==2.10
 more-itertools==8.4.0
+oauthlib==3.1.0
 packaging==20.4
 pluggy==0.13.1
 py==1.9.0
@@ -16,6 +18,7 @@ pytest==5.3.5
 pytest-django==3.8.0
 pytz==2020.1
 requests==2.24.0
+requests-oauthlib==1.3.0
 six==1.15.0
 sqlparse==0.3.1
 urllib3==1.25.10
