change for GCloud

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,14 @@ services:
     restart: always
     container_name: apisureserver
     ports:
-      - 8002:8002
+      - 80:80
     working_dir: /code
     
 
-  nginx_ui:
-    build: ./gui
-    image: project-ui
-    container_name: project-ui
-    working_dir: /usr/share/nginx/html
-    ports:
-      - 80:80
+#  nginx_ui:
+#    build: ./gui
+#    image: project-ui
+#    container_name: project-ui
+#    working_dir: /usr/share/nginx/html
+#    ports:
+#      - 80:80
